# funky

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
agent_service/gcp_python_openrouter/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
agent_service/gcp_python_openrouter/src/funky_agent_service_openrouter/: __init__.py  _auth.py  loop.py  server.py  service.py
agent_service/gcp_python_openrouter/tests/: test_openrouter_agent_service.py
agent_service/local_python_anthropic/: README.md  pyproject.toml
agent_service/local_python_anthropic/src/funky_agent_service_anthropic/: __init__.py  loop.py  server.py  service.py
agent_service/local_python_anthropic/tests/: test_agent_service.py
apps/api/: package.json
apps/api/src/: app.ts  config.ts  http.ts  index.ts  sse.ts
apps/api/src/middleware/: auth.ts  request-id.ts
apps/api/src/routes/: agents.ts  common.ts  environments.ts  sessions.ts
apps/api/test/: helpers.ts  pg.ts  sessions.integration.test.ts  sessions.test.ts  sse.test.ts
apps/web/: README.md  index.html  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  env.d.ts  theme.css
apps/web/src/console/: Agents.tsx  Chat.tsx  Environments.tsx  QuickStart.tsx  Sessions.tsx  console.css  curl.ts  data.ts  parts.tsx
apps/web/src/lib/: api.ts  format.ts  models.ts  network.ts  types.ts
apps/web/src/ui/: ui.css  ui.tsx
apps/worker/src/: config.ts  index.ts
apps/worker/test/: config.test.ts  worker.test.ts
client/local_python/: README.md  pyproject.toml
client/local_python/src/funky_client_local/: __init__.py  client.py  server.py
client/local_python/tests/: test_local_client.py  test_local_server.py
client/python/: README.md
client/python/src/funky_client/: server.py
config_registry/: README.md
config_registry/gcp_python_postgres/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
config_registry/gcp_python_postgres/src/funky_config_registry_postgres/: __init__.py  models.py  server.py  service.py  store.py
config_registry/gcp_python_postgres/tests/: test_postgres_config_registry.py
config_registry/local_python_jsonl/: README.md  pyproject.toml
config_registry/local_python_jsonl/src/funky_config_registry_jsonl/: __init__.py  server.py  service.py  store.py
config_registry/local_python_jsonl/tests/: test_config_registry.py
docker/: sandbox.Dockerfile
proto/funky/agent/v1/: agent_service.proto
proto/funky/registry/v1/: config_registry.proto
proto/funky/sandbox/v1/: sandbox_runtime.proto
proto/funky/session/v1/: session_store.proto
proto/funky/type/v1/: agent.proto  event.proto  sandbox.proto  session.proto
sandbox_runtime/: README.md
sandbox_runtime/gcp_python_modal/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
sandbox_runtime/gcp_python_modal/src/funky_sandbox_runtime_modal/: __init__.py  runtime.py  server.py  service.py
sandbox_runtime/gcp_python_modal/tests/: test_modal_sandbox_runtime.py
sandbox_runtime/local_python_docker/: README.md  pyproject.toml
sandbox_runtime/local_python_docker/src/funky_sandbox_runtime_docker/: __init__.py  runtime.py  server.py  service.py
sandbox_runtime/local_python_docker/tests/: test_sandbox_runtime.py
session_store/gcp_python_postgres/: Dockerfile  README.md
tests/chaos/src/: harness.ts
web/: .dockerignore  Dockerfile  README.md  nginx.conf
