# funky-agent-service-openrouter — an AgentService backend that runs one agent
# turn against OpenRouter's OpenAI-compatible Chat Completions API, so a request
# can name any model OpenRouter routes to. Packaged for Cloud Run (see Dockerfile);
# the model call needs OPENROUTER_API_KEY. See README.md to run it.
[project]
name = "funky-agent-service-openrouter"
version = "0.0.0"
description = "OpenRouter-backed implementation of the Funky AgentService service, deployable to Cloud Run."
requires-python = ">=3.10"
dependencies = [
  "funky-protos",
  # Pure-Python WSGI server. Required over stdlib wsgiref, which deadlocks
  # connect-python's request-body drain on the error path (see server.py).
  "waitress>=3",
  # Official OpenAI SDK, pointed at OpenRouter's base_url — OpenRouter exposes the
  # OpenAI Chat Completions wire format, and this is its recommended client.
  "openai>=1.40",
]

[project.scripts]
funky-agent-service-openrouter = "funky_agent_service_openrouter.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funky_agent_service_openrouter"]

# Resolve funky-protos from the workspace (gen/python) rather than PyPI.
[tool.uv.sources]
funky-protos = { workspace = true }
