# funky-client-local — the FunkyClient orchestrator behind a small REST API, for
# local and Docker Compose use. It wires the four Funky services together over
# plain HTTP ConnectRPC (no auth) and exposes them as one JSON/REST endpoint. The
# Cloud Run variant, which adds OIDC ID tokens, lives in client/gcp_python. See
# README.md.
[project]
name = "funky-client-local"
version = "0.0.0"
description = "FunkyClient over a local REST API — the orchestrator for the four Funky services."
requires-python = ">=3.10"
dependencies = [
  "funky-protos",
  # The REST front door: a small ASGI framework and an ASGI server. The server is
  # the whole point of this package, so unlike the gcp variant these aren't behind
  # an extra.
  "starlette>=0.37",
  "uvicorn>=0.30",
]

# funky-client-local-server: the orchestrator over a REST API, for Compose.
[project.scripts]
funky-client-local-server = "funky_client_local.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funky_client_local"]

# Resolve funky-protos from the workspace rather than PyPI.
[tool.uv.sources]
funky-protos = { workspace = true }
