# funky-config-registry-postgres — a ConfigRegistry backend that stores agent and
# environment configs in a GCP Cloud SQL (Postgres) database, reached through the
# Cloud SQL Python Connector with the async asyncpg driver and mapped with the
# SQLAlchemy ORM. See README.md to run it.
[project]
name = "funky-config-registry-postgres"
version = "0.0.0"
description = "GCP Cloud SQL (Postgres) implementation of the Funky ConfigRegistry service."
requires-python = ">=3.10"
dependencies = [
  "funky-protos",
  # Async ORM. SQLAlchemy 2.x's typed `Mapped[...]` columns keep the schema and
  # queries readable; the `asyncio` extra pulls in the async engine support.
  "sqlalchemy[asyncio]>=2",
  # Dials Cloud SQL over a secure tunnel and hands SQLAlchemy an asyncpg
  # connection; the extra pins a compatible asyncpg.
  "cloud-sql-python-connector[asyncpg]>=1.12",
  # ASGI server for the generated async ConfigRegistryASGIApplication.
  "uvicorn>=0.30",
]

[project.scripts]
funky-config-registry-postgres = "funky_config_registry_postgres.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funky_config_registry_postgres"]

# Resolve funky-protos from the workspace (gen/python) rather than PyPI.
[tool.uv.sources]
funky-protos = { workspace = true }
