# funky-config-registry-jsonl — a ConfigRegistry backend that stores configs in
# two append-only JSONL files (agents.jsonl, environments.jsonl). Fully local,
# no database. See README.md to run it.
[project]
name = "funky-config-registry-jsonl"
version = "0.0.0"
description = "Local JSONL-backed implementation of the Funky ConfigRegistry service."
requires-python = ">=3.10"
dependencies = [
  "funky-protos",
  # Pure-Python WSGI server. Required over stdlib wsgiref, which deadlocks
  # connect-python's request-body drain on the error path (see server.py).
  "waitress>=3",
]

[project.scripts]
funky-config-registry-jsonl = "funky_config_registry_jsonl.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funky_config_registry_jsonl"]

# Resolve funky-protos from the workspace (gen/python) rather than PyPI.
[tool.uv.sources]
funky-protos = { workspace = true }
