# funky-sandbox-runtime-modal — a SandboxRuntime backend that runs each sandbox
# as a Modal Sandbox (a container in Modal's cloud; its Modal object id is the
# sandbox id). The service itself deploys to Cloud Run; the sandboxes run on
# Modal. Needs Modal credentials (MODAL_TOKEN_ID / MODAL_TOKEN_SECRET). See
# README.md to run and deploy it.
[project]
name = "funky-sandbox-runtime-modal"
version = "0.0.0"
description = "Modal-backed implementation of the Funky SandboxRuntime service, deployable to Cloud Run."
requires-python = ">=3.10"
dependencies = [
  "funky-protos",
  # Pure-Python WSGI server. Required over stdlib wsgiref, which deadlocks
  # connect-python's request-body drain on the error path (see server.py).
  "waitress>=3",
  # Modal SDK — the client for creating and driving Modal Sandboxes.
  "modal>=1",
]

[project.scripts]
funky-sandbox-runtime-modal = "funky_sandbox_runtime_modal.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funky_sandbox_runtime_modal"]

# Resolve funky-protos from the workspace (gen/python) rather than PyPI.
[tool.uv.sources]
funky-protos = { workspace = true }
