# funky-sandbox-runtime-docker — a SandboxRuntime backend that runs each sandbox
# as a long-lived local Docker container (the container name is the sandbox id).
# Fully local; needs a reachable Docker daemon. See README.md to run it.
[project]
name = "funky-sandbox-runtime-docker"
version = "0.0.0"
description = "Local Docker-backed implementation of the Funky SandboxRuntime service."
requires-python = ">=3.10"
dependencies = [
  "funky-protos",
  # Pure-Python WSGI server. Required over stdlib wsgiref, which deadlocks
  # connect-python's request-body drain on the error path (see server.py).
  "waitress>=3",
  # Docker SDK for Python — the client for the local Docker daemon.
  "docker>=7",
]

[project.scripts]
funky-sandbox-runtime-docker = "funky_sandbox_runtime_docker.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funky_sandbox_runtime_docker"]

# Resolve funky-protos from the workspace (gen/python) rather than PyPI.
[tool.uv.sources]
funky-protos = { workspace = true }
